Atualizaçoes de imagens e responsividade

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="menu">
             <div class="container">
                 <h2 class="jaque">JAQUE<span class="fontes">FONTES</span></h2>
-                <nav>
+                <nav class="topicos-menu">
                     <a href="#inicio">Início</a>
                     <a href="#projetos">Projetos</a>
                     <a href="#experiencia">Experiência e Formação</a>
@@ -41,7 +41,7 @@
                 <h3 class="titulo">Jaqueline Fontes</h3>
                 <p class="posicao">Front-end Developer | HTML5 | CSS3 | JavaScript</p>
                 <p class="descricao">Graduada em Comunicação Social e pós graduada em Administração e Marketing com experiência em coordenação de projetos de eventos, marketing digital e comunicação corporativa. </p>
-                <p class="descricao2">Em transição de carreira para atuar como Front-end Developer, buscando conhecimentos e aprendizados constantes e me apaixonando cada vez mais por esse mundo. </p>
+                <p class="descricao2">Em transição de carreira para atuar como Front-end Developer, estou buscando conhecimentos e aprendizado constante e me apaixonando cada vez mais por esse mundo. </p>
 
 
                 <div class="botoes">
@@ -72,10 +72,56 @@
 
         <div class="owl-carousel owl-theme">
             <div class="item">
-                <img class="box-item" src="./img/teste.png" alt="">
+                <img class="box-item" src="./img/1.png" alt="">
+                <div class="link-github">
+                    <a href="https://github.com/jaquefontes/Dev_Finances" target="_blank">
+                        <i class="fa fa-github fa-3x" aria-hidden="true"></i>
+                        <p class="nome-projeto">Dev Finances - Rocketseat</p>
+                    </a>
+                </div>
+            </div>
+            <div class="item">
+                <img class="box-item" src="./img/2.png" alt="">
+                <div class="link-github">
+                    <a href="https://github.com/jaquefontes/Bikcraft" target="_blank">
+                        <i class="fa fa-github fa-3x" aria-hidden="true"></i>
+                        <p class="nome-projeto">Bikcraft - Origamid</p>
+                    </a>
+                </div>
+            </div>
+            <div class="item">
+                <img class="box-item" src="./img/3.png" alt="">
+                <div class="link-github">
+                    <a href="https://github.com/jaquefontes/ImersaoDev-Alura" target="_blank">
+                        <i class="fa fa-github fa-3x" aria-hidden="true"></i>
+                        <p class="nome-projeto">Imersão Dev - Alura</p>
+                    </a>
+                </div>
+            </div>
+            <div class="item">
+                <img class="box-item" src="./img/4.png" alt="">
+                <div class="link-github">
+                    <a href="https://github.com/jaquefontes/Instagram_Page" target="_blank">
+                        <i class="fa fa-github fa-3x" aria-hidden="true"></i>
+                        <p class="nome-projeto">Clone página login Instagram</p>
+                    </a>
+                </div>
+            </div>
+            <div class="item">
+                <img class="box-item" src="./img/5.png" alt="">
                 <div class="link-github">
                     <a href="https://github.com/jaquefontes/Snake_Game" target="_blank">
                         <i class="fa fa-github fa-3x" aria-hidden="true"></i>
+                        <p class="nome-projeto">Snake Game</p>
+                    </a>
+                </div>
+            </div>
+            <div class="item">
+                <img class="box-item" src="./img/6.png" alt="">
+                <div class="link-github">
+                    <a href="https://github.com/jaquefontes/Netflix_Page" target="_blank">
+                        <i class="fa fa-github fa-3x" aria-hidden="true"></i>
+                        <p class="nome-projeto">Clone página inicial Netflix</p>
                     </a>
                 </div>
             </div>
@@ -110,7 +156,6 @@
         </div>
 
         <!-- Formação Tech -->
-
         <div class="subtitulo">
             <p>Formação TECH</p>
         </div>
@@ -165,28 +210,25 @@
 
             <div class="owl-carousel owl-theme">
                 <div class="item2">
-                    <img class="box-item" src="./img/teste.png" alt="">
+                    <img class="box-item" src="./img/cachorro2.png" alt="">
+                    <p class="interesse">Cachorros</p>
                 </div>
                 <div class="item2">
-                    <img class="box-item" src="./img/teste.png" alt="">
+                    <img class="box-item" src="./img/viagem.png" alt="">
+                    <p class="interesse">Viagens</p>
                 </div>
                 <div class="item2">
-                    <img class="box-item" src="./img/teste.png" alt="">
+                    <img class="box-item" src="./img/livros.png" alt="">
+                    <p class="interesse">Livros</p>
                 </div>
                 <div class="item2">
-                    <img class="box-item" src="./img/teste.png" alt="">
+                    <img class="box-item" src="./img/confeitaria.png" alt="">
+                    <p class="interesse">Confeitaria</p>
                 </div>
                 <div class="item2">
-                    <img class="box-item" src="./img/teste.png" alt="">
+                    <img class="box-item" src="./img/series.png" alt="">
+                    <p class="interesse">Séries</p>
                 </div>
-                <div class="item2">
-                    <img class="box-item" src="./img/teste.png" alt="">
-                </div>
-                <div class="item2">
-                    <img class="box-item" src="./img/teste.png" alt="">
-                </div>
-
-
             </div>
         </div>
 
