ajuste de texto

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
                 <div class="experiencia">
                     <p class="empresa">Judy & Associates</p>
-                    <p class="cargo">Analista de Eventos e Viagens de Incentivo</p>
+                    <p class="cargo">Produtora de Eventos e Viagens de Incentivo</p>
                 </div>
 
                 <div class="experiencia">
