--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header id="inicio">
         <div class="menu">
             <div class="container">
-                <h2 class="jaque">JAQUE<span class="fontes">FONTES</span></h2>
+                <h2 class="titulo-topo"><span class="jaque">JAQUE</span><span class="fontes">FONTES</span></h2>
                 <nav class="topicos-menu">
                     <a href="#inicio">Início</a>
                     <a href="#projetos">Projetos</a>
